# aoc-2021

./: Cargo.toml  README.md
files/descriptions/: day1.md  day10.md  day11.md  day12.md  day13.md  day14.md  day15.md  day16.md  day17.md  day18.md  day19.md  day2.md  day20.md  day21.md  day22.md  day23.md  day24.md  day25.md  day3.md  day4.md  day5.md  day6.md  day7.md  day8.md  day9.md
src/: lib.rs  main.rs  utils.rs  web.rs
src/days/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day23_part2.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
