[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
scraper = "*"
html2text = "*"
reqwest = { version = "*", features = ["blocking"] }
nom = "7.1.0"
itertools = "0.10.3"
nalgebra = "0.30.0"
